infrastructure/network-policies/minecraft.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-egress
  namespace: minecraft
spec:
  endpointSelector: {}
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-wg-ingress
  namespace: minecraft
spec:
  endpointSelector:
    matchLabels:
      app: minecraft
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: wg-ingress
            app: wg-ingress
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vmagent-scrape
  namespace: minecraft
spec:
  endpointSelector:
    matchLabels:
      app: minecraft
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9940"
              protocol: TCP
            - port: "9941"
              protocol: TCP
