infrastructure/network-policies/obsidian-livesync.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-egress
  namespace: obsidian-livesync
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# Kyverno's generated default-deny-ingress only allows intra-namespace traffic;
# the Gateway (Cilium's ingress identity) needs 5984 on top of it.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress
  namespace: obsidian-livesync
spec:
  endpointSelector:
    matchLabels:
      app: couchdb
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
